crates/pixi-build-rust/src/snapshots/pixi_build_rust__tests__conda_outputs_with_variants.snap
---
source: crates/pixi-build-rust/src/main.rs
expression: "intermediate_conda_outputs_snapshot::<RustGenerator>(Some(project_model),\nNone, Platform::Linux64, Some(variants))"
---
{
  "outputs": [
    {
      "metadata": {
        "name": "foobar",
        "version": "0.1.0",
        "build": "hc325156_0",
        "buildNumber": 0,
        "subdir": "linux-64",
        "noarch": false
      },
      "buildDependencies": {
        "depends": [
          {
            "name": "rust_linux-64",
            "binary": {
              "version": "1.86.*"
            }
          }
        ]
      },
      "runDependencies": {
        "depends": [
          {
            "name": "boltons"
          }
        ]
      }
    },
    {
      "metadata": {
        "name": "foobar",
        "version": "0.1.0",
        "build": "hce365a6_0",
        "buildNumber": 0,
        "subdir": "linux-64",
        "noarch": false
      },
      "buildDependencies": {
        "depends": [
          {
            "name": "rust_linux-64",
            "binary": {
              "version": "1.87.*"
            }
          }
        ]
      },
      "runDependencies": {
        "depends": [
          {
            "name": "boltons"
          }
        ]
      }
    }
  ]
}
