crates/pixi-build-rust/src/snapshots/pixi_build_rust__tests__rust_is_in_build_requirements.snap
---
source: crates/pixi-build-rust/src/main.rs
expression: generated_recipe.recipe
---
context: {}
package:
  name: foobar
  version: 0.1.0
source: []
build:
  number: ~
  script: "[ ... script ... ]"
requirements:
  build:
    - "${{ compiler('rust') }}"
  host: []
  run:
    - boltons
  run_constraints: []
tests: []
about:
  homepage: ~
  license: ~
  summary: ~
  description: ~
  documentation: ~
  repository: ~
extra: ~
